--- a/config/config.yml
+++ b/config/config.yml
@@ -9,3 +9,12 @@ log:
 
 ip: 127.0.0.1
 port: 8080
+
+email:
+  server: 'smtp.exmail.qq.com:465'
+  sender: 'zhangjiukun@sensenets.com'
+  password: 'A79C8mjxcLk2Ycqj'
+  receiver: 'zhangjiukun@sensenets.com',
+  title: '冒烟测试报告'
+
+
