--- a/Pipfile
+++ b/Pipfile
@@ -1,7 +1,7 @@
 [[source]]
 name = "pypi"
-# url = "https://pypi.org/simple"
-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
+url = "https://pypi.org/simple"
+# url = "https://pypi.tuna.tsinghua.edu.cn/simple"
 verify_ssl = true
 
 [dev-packages]
@@ -20,6 +20,9 @@ xlrd = ">=1.1.0"
 xlwt = ">=1.3.0"
 yamlreader = ">=3.0.4"
 django = "*"
+injson = "*"
+pytest-allure-adaptor = "*"
+allure-pytest = "*"
 
 [requires]
 python_version = ">=3"
