--- a/Pipfile
+++ b/Pipfile
@@ -19,10 +19,9 @@ urllib3 = ">=1.23"
 xlrd = ">=1.1.0"
 xlwt = ">=1.3.0"
 yamlreader = ">=3.0.4"
-django = "*"
-injson = "*"
-pytest-allure-adaptor = "*"
-allure-pytest = "*"
+django = ">=2.1.4"
+injson = ">=0.2.2"
+allure-pytest = ">=2.5.4"
 
 [requires]
-python_version = ">=3"
+python_version  = "3.6"
